# wind-song

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  bilibili.rs  commands.rs  lib.rs  main.rs  utils.rs
